--- a/ve-xem-phim/appsettings.json
+++ b/ve-xem-phim/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=YOUR_SERVER_NAME;Database=MovieTicketDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=LAPTOP-6MC40GLT\\SQLEXPRESS;Database=MovieTicketDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
     },
     "AllowedHosts": "*"
 }
