--- a/ve-xem-phim/ve-xem-phim.csproj
+++ b/ve-xem-phim/ve-xem-phim.csproj
@@ -18,4 +18,11 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.14" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Home\GetRoomsAndShowtimes.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
